--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -201,58 +201,59 @@
     The model framework we present here quantifies pair-wise interaction strengths between species from diverse single-trophic community data. Several aspects of our model and its implementation allow us to better capture complex features of plant communities compared to co-occurrence networks. Like co-occurrence networks, our framework is flexible to the inclusion of many species. Unlike co-occurrence networks, however, interactions in our model are estimated from species effects on each other's growth rates.  This allows us to capture how interactions may directly affect species abundances, rather than spatial association patterns. Two features make this possible: the response-effect model to estimate unobserved interactions, and a Bayesian implementation to deal with many parameters. 
 
     \paragraph{}
-    The response-effect model allows us to deal with a small number of unobserved interactions by relaxing assumptions for those cases and estimating more general 'effect' and 'response' parameters from the pair-wise interactions that are observed. Being estimated from observed interactions previously quantified by the IFM, the response and effect parameters are constrained such that their product follows a similar distribution to that of the observed interactions (Figure \ref{fig:adist}). In our case study, 15\% of interactions between focal species were estimated using the REM (out of 484), 40\% when taking all neighbouring species into account (out of 1144). 
+    The response-effect model allows us to deal with a small number of unobserved interactions by relaxing assumptions for those cases and estimating more general 'effect' and 'response' parameters from the pair-wise interactions that are observed. Because they are estimated from observed interactions previously quantified by the IFM, the response and effect parameters are constrained such that their product follows a similar distribution to that of the observed interactions (Figure \ref{fig:adist}). In our case study, 15\% of interactions between focal species were estimated using the REM (out of 484), 40\% when taking all neighbouring species into account (out of 1144). 
 
 
     \paragraph{}
-    The Bayesian implementation means that parameters are estimated using MCMC algorithms, which can estimate more parameters than with more commonly used frequentist approaches (add REFs – find in Masters??). This approach also returns parameter estimates as posterior distributions rather than simple mean and standard deviations. By having access to the full distribution of likely values for every interaction, we can draw samples of likely networks from these distributions and thus easily incorporate some measure of variation and uncertainty around interaction values. % This is expecially useful given how weak interactions are, and that estimates often overlap with 0...
+    The Bayesian implementation means that parameters are estimated using MCMC algorithms, which amongst many benefits can estimate more parameters than with more commonly used frequentist approaches \citep{Dorazio2016}. This approach also returns parameter estimates as posterior distributions rather than simple mean and standard deviations. By having access to the full distribution of likely values for every interaction, we can draw samples of likely networks from these distributions and thus easily incorporate some measure of variation and uncertainty around interaction values. % This is expecially useful given how weak interactions are, and that estimates often overlap with 0...
 
-    \begin{figure}[H]
+
+    \paragraph{}
+    The resulting networks are non-symmetrical and can include both positive and negative interactions (panel A in Figure \ref{fig:netwks}), features which makes them qualitatively different to association networks as well as different to traditional plant population ecology approaches. By allowing for non-symmetry, the effect of species 1 on species 2 does not need to match the effect of species 2 on species 1. In our case study, 40\% of interactions between a pair of species were asymmetrical in type, that is of opposing signs (panel B, Figure \ref{fig:netwks}) and many more differed in strength. 
+    
+    Our method also breaks from traditional plant population dynamic models by allowing for facilitation, whereas interactions are typically forced to be competitive. Facilitation is well-known to be important to community dynamics but is not explicitly measured or recognised by these approaches, despite rising evidence that it is a common feature of plant-plant communities \citep{Brooker2008a}. In our case study, 35\% of all focal x neighbour interactions were facilitative, and 26 \% of all focal x focal interactions (panels C and D, Figure \ref{fig:netwks}).
+
+
+
+        \begin{figure}[H]
         \includegraphics[width=\textwidth]{../2.analyses/figures/alpha_est_distr.png}
         \caption{Distribution of interaction estimates from our case study. Top panel shows the distribution of observed interactions as estimated by the IFM. Second panel shows those same interactions, but estimated with the REM. Bottom panel shows the distribution of unobserved interactions estimated by the REM. Interaction estimates are given as unscaled \(\alpha\)'s.}
         \label{fig:adist}
     \end{figure}
 
 
-    \paragraph{}
-    The resulting networks are non-symmetrical and can include both positive and negative interactions (Figure \ref{fig:netwks}), features which makes them qualitatively different to association networks as well as different to traditional plant population ecology approaches. By allowing for non-symmetry, the effect of species 1 on species 2 does not need to match the effect of species 2 on species 1. In our case study, 40\% of interactions between a pair of species were asymmetrical in type, that is of opposing signs.
-    Our method also breaks from traditional plant population dynamic models by allowing for facilitation, whereas interactions are typically forced to be competitive in other approaches.     Facilitation is well-known to be very important to community dynamics but is not explicitly measured or recognised by these approaches, despite rising evidence that it is a common feature of plant-plant communities (REF). In our case study, 35\% of all focal x neighbour interactions were facilitative, and xx \% between focals only.
-
     \begin{figure}[H]
         \hspace*{-2cm}
         \includegraphics[width=1.2\textwidth]{../2.analyses/figures/together.png}
-        \caption{Competitive (A) and facilitative (B) interaction networks estimated from our model framework, compared to an association network (C) estimated from the same data using the cooccur package. Interactions estimated for (A) and (B) are given as the mean over 1000 samples. Competitive and facilitative interactions are here shown separately for ease of view but were analysed together.}
+        \caption{Competitive (A) and facilitative (B) interaction networks estimated from our model framework, compared to an association network (E) estimated from the same data using the cooccur package. Focal species only are included. Species associations (E) were all negative.  Interactions estimated for (A) and (B) are given as the mean over 1000 samples. Competitive and facilitative interactions are here shown separately for ease of view but were analysed together (C). (D) shows the proportion of interaction loops which were asymmetric (+/-), cooperative (+/+) or competitive (-/-).}
         \label{fig:netwks}
     \end{figure}    
 
     \paragraph{} 
-    Our interaction networks can be used to identify species of particular important to the healthy functioning of the community. Keystone species for example typically have low abundance but disproportionately strong effects on the rest of the community. Foundation species on the other hand are locally abundant and have important, sometimes facilitative effects on ohter species population dynamics. Table 
+    Interaction networks can be used to identify species of particular importance to the healthy functioning of the community. Keystone species for example typically have low abundance but disproportionately strong effects on the rest of the community \citep{Power1996}. Foundation species on the other hand are locally abundant and have important, sometimes facilitative effects on other species population dynamics \citep{Ellison2019}. Figure \ref{fig:species}.A. identifies several contenders for keystone (orange diamonds) or foundation (blue diamonds) species status based on their community abundance and net interaction effects across all neighbours. Likewise, the integration of exotic species into native communities can also be evaluated using interaction networks. In our case study, two out of three exotic species (red diamonds in Fig. \ref{fig:species}) were extremely abundant but had substantially different effects on neighbours, with the grass \textit{Pentameris airoides} facilitating some neighbours, whereas \textit{Arctotheca calendula} had almost exclusively competitive effects on other species (Fig. \ref{fig:species}.B.). These examples are not exhaustive, but serve to illustrate how interaction networks can help us understand what roles specific species play within a community.
 
 
+ %    Identifying keystone species. .. GITE and HAOD rel. abund < 0.01, two highest sumaji. Maybe GOBE  too? 
+ %    Invasives...
 
-    Remove POCA from table?
-    Identifying keystone species. .. GITE and HAOD rel. abund < 0.01, two highest sumaji. Maybe GOBE  too? Keystone species are identified as ... can be identified by having relatively low biomass in comparison to the structuring effects they have on food webs \citep{Libralato2006}. 
-    Keystone species affect the communities of which they are part in a manner disproportionate to their abundance (Power et al., 1996). Keystone species strongly influence the abundances of other species and the ecosystem dynamic (Piraino et al., 2002). Therefore, it is important to identify keystone species, notably to maintain ecosystem integrity, and biological diversity in the face of exploitation and other stresses (Naeem and Li, 1997, Tilman, 2000).
-    Invasives...
+ %     Foundation species: VERO, maybe POCA ? Also well connected! 
 
-    Foundation species: locally abundant and control associated biodiversity / ecosystem processes \citep{Baiser2013}. In addition, foundation species differ from dominant species in that the former are thought to be irreplaceable in terms of their control on population and community dynamics and ecosystem processes, whereas the latter are considered replaceable (Ellison et al. 2005b). \citep{Ellison2005}. Foundation species: VERO, maybe POCA ? Also well connected! 
+ %    PLDE : fairly common, strong facilitative effects
 
-    PLDE : fairly common, strong facilitative effects
+ %    Dominant species are locally abundant but replaceable. 
 
-    Dominant species are locally abundant but replaceable. 
+ %    Invasives: ARCA
 
-    Invasives: ARCA
+ %    TRCY and TROR - very different strategies!
 
-    TRCY and TROR - very different strategies!
+ %    EROD: outcompeted by many species, weak effects on others, received lots of facilitation
 
-    EROD: outcompeted by many species, weak effects on others, received lots of facilitation
-
- - abundance - sum of comp effects - sum of facil effects
+ % - abundance - sum of comp effects - sum of facil effects
 
     \begin{figure}[H]
         \hspace*{-1cm}
-        \includegraphics[width=1.2\textwidth]{../2.analyses/figures/spceffects.png}
-        \caption{Focal species net effects on neighbours, according to their abundance. On the x axis, values over 0 indicate a net competitive effect whereas values below 0 indicate a net facilitative effect on neighbouring species. Diamonds are species means across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of out-strength values as calculated from 1000 sampled networks. Dashed lines represent the median value for focals.}
+        \includegraphics[width=1.2\textwidth]{../2.analyses/figures/spceffects_edited.png}
+        \caption{Focal species net effects on neighbours, according to their abundance (A). On the x axis, values over 0 indicate a net competitive effect whereas values below 0 indicate a net facilitative effect on neighbouring species. Dashed lines represent the median value for focals. Diamonds are species means across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of out-strength values as calculated from 1000 sampled networks. Yellow, blue and red diamonds signify potential keystone or foundation species, and exotic species respectively. (B) Focal species effects on neighbours, split into competitive vs. facilitative. Axes refer to the absolute sum of competitive vs. facilitative interactions.}
         \label{fig:species}
     \end{figure} 
 
@@ -262,48 +263,21 @@
 
 
 
-    % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-    
-
-    
-
-    % We built an interactio nmatrix for .... whole comm only. We estiamted so many interactions with the IFM and so many with the REM. So many interactions were competitive, whereas so many were facilitative. We estimated so many intraspecific interactions. Species node distribution followed an xx distribution. 
 
     % Suc hand such species are likely candidates for keystone species. Whearas x or y are connector species. Invasive species Arca and xx were not well embedded in the network, indicating that .... 
 
     % Our network differs remarquebly from a species association network, which would lead us to assume that x species is actually .. . Furthermore .... 
 
-    % Please add the following required packages to your document preamble:
-% \usepackage[table,xcdraw]{xcolor}
-% If you use beamer only pass "xcolor=table" option, i.e. \documentclass[xcolor=table]{beamer}
 
-% \begin{table}[H]
-% \centering
-%     \begin{tabular}{lccc}
-%     \multicolumn{1}{c}{}                    & Abundance                    & Net Competitive effects     & Net Facilitative effects    \\ \hline
-%     {\color[HTML]{000000} Community median} & {\color[HTML]{000000} 358.5} & {\color[HTML]{000000} 0.42} & {\color[HTML]{000000} 0.11} \\ \hline
-%     GITE                                    & {\color[HTML]{656565} 96}    & 2.06                        & {\color[HTML]{656565} 0.00} \\
-%     HAOD                                    & 193                          & 1.45                        & {\color[HTML]{656565} 0.03} \\
-%     GOBE                                    & 374                          & 0.79                        & {\color[HTML]{656565} 0.07} \\
-%     POCA                                    & 2510                         & 0.71                        & {\color[HTML]{656565} 0.11} \\
-%     VERO                                    & 8676                         & 0.50                        & {\color[HTML]{656565} 0.03} \\
-%     PLDE                                    & 1309                         & {\color[HTML]{656565} 0.18} & 0.25                        \\
-%     ARCA                                    & 3211                         & 0.74                        & {\color[HTML]{656565} 0.04}
-%     \end{tabular}
-%     \caption{Abundance and net interaction effects for a subset of focal species from our case study. Values given in grey lie below the community median.}
-%     \label{tab:species}
-% \end{table}
 
 \section{Discussion}
     
-    These two next paragraphs can be deleted or merged with the ‘results’ section above especially once I’ve added the extra results. 
 
  
     
     The model framework presented here allows the estimation of species-rich interaction matrices from plant community data. Our paper makes it easier for empiricists to characterise species interactions in their systems, as usually they need to come up with complex models to resolve all interactions. We provide a model for annual plant systems and a method which can be extended to any horizontal community for which there is a model of population dynamics - you will just need to adapt the model and scaling of interactions. \\
 
-    The interaction matrices this model estimates are fundamentally different to association networks, which are a common alternative to estimating interactions in species-rich communities. Our estimates are direct per-capita effects of one species on another so have direct consequences on population abundances. Our model and it's implementation can estimate these interactions for many species, as well as include intraspecific interactions and facilitation. Our framework thus produces a better representation of the complexity of real plant communities and their interactions. This then allows us to do a bunch of cool stuff to a) better understand plant communities in general and b) better understand a specific plant system. Though our method still requires a lot of data, people interested in applications of this model (conservationists and ecosystem management) are likely to have access to the kind of monitoring data which is needed.  
+    The interaction matrices this model estimates are fundamentally different to association networks, which are a common alternative to estimating interactions in species-rich communities. Our estimates are direct per-capita effects of one species on another so have direct consequences on population abundances. Our model and it's implementation can estimate these interactions for many species, as well as include intraspecific interactions and facilitation. Our framework thus produces a better representation of the complexity of real plant communities and their interactions. This then allows us to do a bunch of cool stuff to a) better understand plant communities in general and b) better understand a specific plant system.  
 
     % Make it easier for empiricists to characterise species interactions in their system. Typically experimenters who want to build measure these things need to come up with complex models to resolve all interactions. If your data is plant annuals you can just plug your data right in. If it's a different type of species, you just need to adapt the population model and scaling of the interactions to work with your particular system. 
 
@@ -317,7 +291,7 @@
 
     \subsection{Limitations}
         
-        Though our framework does provide a way of estimating interactions between species which are not observed to cooccur, care should be taken that these unobserved interactions do not dominate a resulting network. The method we propose uses observed interactions to estimate simpler parameters which allow us to approximate the remaining interactions. This method thus works better the more observed interactions we have with which to estimate the unobserved ones. This method is not appropriate for datasets dominated by missing data on interactions.  It is also important to consider the likely reasons for missing interactions.  For instance, species pairs known to lack overlapping environmental requirements likely do not occur together do to environmental filtering that precedes interaction between individuals of the species.  It would not be appropriate to include such pairs in our framework. These interactions can be replaced with a 0... briefly bring up forbidden interactions, and how that framework (get a ref) could be helpful to people who have a lot of missing observations, or where there’s likely to be strong niche differences between species leading to no interactions. \\
+        Though our framework does provide a way of estimating interactions between species which are not observed to cooccur, care should be taken that these unobserved interactions do not dominate a resulting network. The method we propose uses observed interactions to estimate simpler parameters which allow us to approximate the remaining interactions. This method thus works better the more observed interactions we have with which to estimate the unobserved ones. This method is not appropriate for datasets dominated by missing data on interactions (e.g. over 50\% 'unobserved' interactions).  It is also important to consider the likely reasons for missing interactions.  For instance, species pairs known to lack overlapping environmental requirements likely do not occur together due to environmental filtering that precedes interaction between individuals of the species.  It would not be appropriate to include such pairs in our framework. These interactions can be replaced with a 0... briefly bring up forbidden interactions, and how that framework (get a ref) could be helpful to people who have a lot of missing observations, or where there’s likely to be strong niche differences between species leading to no interactions. \\
 
         Our model framework is aimed to helping empiricists who want to estimate interactions for non-trophic horizontal communities - but these empiricists will still require large amounts of data. Though the MCMC sampling algorithm does allow for many parameters to be estimated, it is crucial to check chain-mixing and model behaviour to verify that the full parameter space is sampled. We wouldn't recommend fewer than 20 observations per focal species, and we do recommend grouping species which appear very very rarely (Give details, what criteria did I use? Can also say you can change that, especially if you know the system well...). More data will also give more precise estimates of interaction strengths.   
 
@@ -327,6 +301,11 @@
         Interaction networks provide a unique lens with which to examine an ecological community. Specifically, interaction networks allow us to determine important species which have particular effects on the wider community, as well as to examine how species of interest are affected by the whole community. These two aspects are particularly important to ecosystem management and conservation because they allow us to establish management strategies which are adapted to the community and species involved, and which acknowledge the interlinkedness of species and their effects on one another.  \\
 
         Certain species play important roles in the community which can be deduced from their position in the interaction network. Keystone species for example are both crucial to maintaining the organisation and diversity of their community, and have exceptionally strong effects on other species (Mills et al. 1993), often leading to secondary extinctions when they are removed from a network. In single-trophic systems, keystone species could be identified by their high in-strength ... Foundation species on the other hand ... Foundation species can be identified by high abundance, connectedness and predominantly facilitative interactions. \\
+
+        Keystone species are identified as ... can be identified by having relatively low biomass in comparison to the structuring effects they have on food webs \citep{Libralato2006}. 
+    Keystone species affect the communities of which they are part in a manner disproportionate to their abundance (Power et al., 1996). Keystone species strongly influence the abundances of other species and the ecosystem dynamic (Piraino et al., 2002). Therefore, it is important to identify keystone species, notably to maintain ecosystem integrity, and biological diversity in the face of exploitation and other stresses (Naeem and Li, 1997, Tilman, 2000).
+
+    Foundation species: locally abundant and control associated biodiversity / ecosystem processes \citep{Baiser2013}. In addition, foundation species differ from dominant species in that the former are thought to be irreplaceable in terms of their control on population and community dynamics and ecosystem processes, whereas the latter are considered replaceable (Ellison et al. 2005b). \citep{Ellison2005}.
 
         Network approaches can also be used to determine how specific species are integrated within the community. We can determine whether invasive species are competing with or impacting many of the native species, or if they are disproportionally affecting a handful of species. Weak interactions between invasive and native species would indicate low resource sharing, such that the invasive species are probably exploiting 'empty' niche space rather taking over the niche space of natives. Threatened species would also benefit from this type of analysis, as we could deduce which other community members are hindering or helping their recovery. This is especially relevant for rare species, as recent work suggests they are the prime emitters and beneficiaries of facilitative interactions, forming mutualistic refuges from competitive dominants. If that is indeed the case, quantifying the interaction networks would help us identify which other species may be involved in 'propping up' the species of interest.  \\
 
